--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 .pnp.js
 .yarn/install-state.gz
 
+
 # testing
 /coverage
 
@@ -19,6 +20,7 @@
 # misc
 .DS_Store
 *.pem
+NOTES_NON_BULLETPROOF.txt
 
 # debug
 npm-debug.log*
